# pediassist

./: .gitignore  .vercelignore  CLOUDFLARE_MANUAL_SETUP.md  CLOUDFLARE_TOKEN_SETUP.md  COMPLETE_CLOUDFLARE_SETUP.md  DASHBOARD_SETUP.md  DEPLOYMENT.md  DEPLOYMENT_NO_COMPROMISES.md  Dockerfile  EASY_ACCESS.md  MANUAL_DNS_SETUP.md  NETLIFY_GIT_CICD_SETUP.md  NETLIFY_GIT_SUMMARY.py  NETLIFY_QUICK_START.py  NETLIFY_SETUP.md  README.md  UNRESTRICTED_TOKEN_GUIDE.md  VERCEL_EASY_ACCESS.md  automated_zero_trust_setup.py  check_access_status.py  cloudflare_quick_setup.md  cloudflare_setup.sh  cloudflare_setup_simple.py  complete_cli_setup.py  debug_safety.py  deploy_netlify.sh  deploy_vercel.sh  diagnose_setup.py  direct_cli_setup.py  direct_setup.py  docker-compose.yml  easy_access_solutions.py  final_access_setup.py  final_complete_setup.py  fix_dns_and_access.py  flexible_access_fixed.py  flexible_access_setup.py  fly.toml  git_deploy.sh  manual_access_setup.py  (+36 more)
.github/workflows/: netlify-deploy.yml  netlify-git-deploy.yml
api/: index.py
data/: usage.json
docker/: README.md
docker/configs/: grafana-dashboard.json  nginx.conf  prometheus.yml
docker/kubernetes/: deployment.yaml
docker/scripts/: backup.sh  generate-ssl.sh  start.sh  stop.sh  update.sh
docs/: PRD_and_Specs.md
netlify/functions/: app.py
pediassist/: __init__.py  cli.py  config.py  diagnosis_parser.py  docker_manager.py  patient_communication.py  security.py  treatment_generator.py  web_app.py
pediassist/core/: communication_engine.py  delegation_manager.py  diagnosis_parser.py  treatment_generator.py
pediassist/database/: __init__.py  models.py  repository.py
pediassist/llm/: __init__.py  cache.py  client.py  cost_tracker.py  prompts.py  provider.py  providers.py  safety.py  validators.py
pediassist/templates/: error.html  index.html  result.html  simple.html
scripts/: init_db.py
